--- a/package.json
+++ b/package.json
@@ -3,18 +3,19 @@
   "version": "0.0.0",
   "main": "index.html",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node wrapper.js"
   },
   "window": {
-    "toolbar": true,
-    "width":800,
-    "height":600
+    "toolbar": false,
+    "width": 800,
+    "height": 600
   },
   "author": "William Blankenship <william.jblankenship@gmail.com>",
   "license": "ISC",
   "dependencies": {
     "nodewebkit": "^0.10.4",
     "once": "^1.3.0",
+    "opn": "^1.0.0",
     "swig": "^1.4.2"
   }
 }
