--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "scripts": {
     "start": "node wrapper.js"
   },
+  "bin" : {
+    "nodeacademy":"wrapper.js"
+  },
   "window": {
     "toolbar": false,
     "width": 800,
