--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "nodewebkit": "^0.10.4",
     "once": "^1.3.0",
     "opn": "^1.0.0",
+    "svg-tree": "^1.0.0",
     "swig": "^1.4.2"
   }
 }
